Test another fix for stretched img on safari and Chrome iOS

--- a/styles/style.css
+++ b/styles/style.css
@@ -59,9 +59,9 @@ nav li:hover {
     font-weight: 400;
   }
 
-  .safari-fix{
-    object-fit: contain;
-  }
+img{
+  object-fit: contain !important;
+}
 
 
 }
